RESOLVED FIXED303332
Fix RefCountable naming and operators
https://bugs.webkit.org/show_bug.cgi?id=303332
Summary Fix RefCountable naming and operators
adrian_taylor
Reported 2025-12-01 11:49:54 PST
The WTF::RefCountable type was recently introduced to allow move-only types to be exposed from C++ to Swift. Code review suggested that its reference/dereference functions should be renamed. In addition, its operator* was returning a pointer rather than a reference.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-12-01 11:50:02 PST
adrian_taylor
Comment 2 2025-12-01 11:54:06 PST
EWS
Comment 3 2025-12-02 00:11:25 PST
Committed 303735@main (eb65f1330ec2): <https://commits.webkit.org/303735@main> Reviewed commits have been landed. Closing PR #54649 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.