Fix RefCountable naming and operators https://bugs.webkit.org/show_bug.cgi?id=303332 rdar://165635016

Reviewed by Geoffrey Garen.

This changes two things in the RefCountable type:

* Removal of the ref/deref members as requested during code review.
* Changes operator* to return a reference rather than a pointer. This
  is more normal, and it unblocks use of .pointee syntax in Swift
  to call non-const member functions, which we were previously
  going to fix a different way in
  https://bugs.webkit.org/show_bug.cgi?id=303180

Canonical link: https://commits.webkit.org/303735@main